# vibe-transcription

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/transcribe_tool/: __init__.py  audio.py  cli.py  config.py  prompt.md  summarizer.py  transcriber.py
